limited llm context chat history to last 4 messages to reduce token consumption. needs more enhancement.

--- a/backend/genai.backend.fastapi/extras/test.ipynb
+++ b/backend/genai.backend.fastapi/extras/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,20 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content=\"J'adore la programmation.\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 6, 'prompt_tokens': 28, 'total_tokens': 34, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-BaUDFPAFs2smbF11kYf2UkyY9cNe0', 'service_tier': None, 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'jailbreak': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}, id='run--53debc16-64da-43be-b7b2-5b31512131b2-0', usage_metadata={'input_tokens': 28, 'output_tokens': 6, 'total_tokens': 34, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "await llm.ainvoke(messages)"
    ]
@@ -94,15 +83,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "content='histoire sur Terre' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 5, 'prompt_tokens': 27, 'total_tokens': 32, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-BaV2XvCohIQJaJ53D0Calgk8GJmiu', 'service_tier': None, 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'jailbreak': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}} id='run--ee9f9529-a6ac-4a9a-9b63-fe01dbe8717b-0' usage_metadata={'input_tokens': 27, 'output_tokens': 5, 'total_tokens': 32, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get the full response at once\n",
     "if chain:\n",
@@ -114,15 +95,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "content=\"J'adore la programmation.\" additional_kwargs={} response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0'} id='run--0c4d065d-a4d6-4abb-82de-e751b4a7be11' usage_metadata={'input_tokens': 28, 'output_tokens': 6, 'total_tokens': 34, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# stream the response\n",
     "full_message = None\n",
@@ -140,17 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'langchain_core.messages.ai.AIMessageChunk'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(type(full_message))"
    ]
@@ -168,6 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Sequence\n",
     "from langchain_core.chat_history import BaseChatMessageHistory\n",
     "from langchain_core.messages import BaseMessage\n",
     "from pydantic import BaseModel, Field\n",
@@ -175,7 +141,7 @@
     "class InMemoryHistory(BaseChatMessageHistory, BaseModel):\n",
     "    messages: list[BaseMessage] = Field(default_factory=list)\n",
     "\n",
-    "    def add_messages(self, messages: list[BaseMessage]) -> None:\n",
+    "    def add_messages(self, messages: Sequence[BaseMessage]) -> None:\n",
     "        self.messages.extend(messages)\n",
     "\n",
     "    def clear(self) -> None:\n",
@@ -187,11 +153,11 @@
     "        self._limit = limit\n",
     "\n",
     "    @property\n",
-    "    def messages(self) -> list[BaseMessage]:\n",
+    "    def messages(self) -> Sequence[BaseMessage]:\n",
     "        # Only return the last N messages\n",
     "        return self._full_history.messages[-self._limit:]\n",
     "\n",
-    "    def add_messages(self, messages: list[BaseMessage]) -> None:\n",
+    "    def add_messages(self, messages: Sequence[BaseMessage]) -> None:\n",
     "        # Delegate writes to the original history\n",
     "        self._full_history.add_messages(messages)\n",
     "\n",
@@ -223,11 +189,11 @@
     "])\n",
     "parser = StrOutputParser()\n",
     "llm = AzureChatOpenAI(\n",
-    "    azure_endpoint=endpoint,\n",
+    "    azure_endpoint=os.environ[\"AZURE_OPENAI_ENDPOINT\"],\n",
     "    azure_deployment=os.environ[\"AZURE_OPENAI_DEPLOYMENT_NAME\"],\n",
-    "    openai_api_version=os.environ[\"AZURE_OPENAI_API_VERSION\"],\n",
+    "    api_version=os.environ[\"AZURE_OPENAI_API_VERSION\"],\n",
     "    temperature=0.01,\n",
-    "    streaming=True,\n",
+    "    stream_usage=True\n",
     ")\n",
     "\n",
     "chain = prompt | llm | parser\n",
@@ -245,8 +211,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async for chunk in chain_with_history.astream({\"input\": \"how many messages we have in this chat? can you list them with roles?\"},\n",
-    "    config={\"configurable\": {\"session_id\": session_id}}):\n",
+    "async for chunk in chain_with_history.astream({\"input\": \"wow\"},\n",
+    "    config={\"configurable\": {\"session_id\": \"base\"}}):\n",
     "    print(chunk, end=\"\", flush=True)"
    ]
   },
@@ -257,28 +223,6 @@
    "outputs": [],
    "source": [
     "print(store)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "serialized_store = pickle.dumps(store)\n",
-    "print(serialized_store)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "re_store = pickle.loads(serialized_store)\n",
-    "store=re_store\n",
-    "print(re_store)"
    ]
   },
   {
@@ -378,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,14 +353,12 @@
     "store = {}\n",
     "branch = \"main\"\n",
     "\n",
-    "# def get_chat_history_by_branch(branch: str) -> BaseChatMessageHistory:\n",
-    "#     if branch not in store:\n",
-    "#         store[branch] = InMemoryHistory()\n",
-    "#     return store[branch]\n",
+    "\n",
     "def get_chat_history_by_branch(branch: str) -> BaseChatMessageHistory:\n",
     "    if branch not in store:\n",
     "        store[branch] = InMemoryHistory()\n",
     "    return store[branch]\n",
+    "\n",
     "\n",
     "def append_message_to_branch(message: BaseMessage, branch: str) -> None:\n",
     "    if branch not in store:\n",
@@ -438,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,11 +402,9 @@
    "outputs": [],
    "source": [
     "async def process_input(input):\n",
-    "    chat_history = get_chat_history_by_branch(branch).messages[-4:]\n",
-    "    print(chat_history)\n",
     "    prompt = ChatPromptTemplate.from_messages([\n",
-    "        (\"system\", \"You are a strict teacher who gives concise answers in 1 word\"),\n",
-    "        *chat_history,\n",
+    "        (\"system\", \"You are a helpful bot\"),\n",
+    "        MessagesPlaceholder(variable_name=\"history\"),\n",
     "        (\"human\", \"{input}\"),\n",
     "    ])\n",
     "    chain = prompt | llm\n",
@@ -472,6 +412,7 @@
     "        chain,\n",
     "        get_session_history=get_chat_history_by_branch,\n",
     "        input_messages_key=\"input\",\n",
+    "        history_messages_key=\"history\",\n",
     "        history_factory_config=[\n",
     "            ConfigurableFieldSpec(\n",
     "                id=\"branch\",\n",
@@ -493,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,42 +443,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[HumanMessage(content='what is earth', additional_kwargs={}, response_metadata={}), AIMessage(content='Planet.', additional_kwargs={}, response_metadata={}), HumanMessage(content='what is earth', additional_kwargs={}, response_metadata={}), AIMessageChunk(content='Planet.', additional_kwargs={}, response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0'}, id='run--93093a8f-bfa9-478c-aa94-c5d009c5205a')]\n",
-      "content='' additional_kwargs={} response_metadata={} id='run--0f30f0a9-380e-4016-85aa-7cfeb1f14573'content='' additional_kwargs={} response_metadata={} id='run--0f30f0a9-380e-4016-85aa-7cfeb1f14573'content='Clar' additional_kwargs={} response_metadata={} id='run--0f30f0a9-380e-4016-85aa-7cfeb1f14573'content='ify' additional_kwargs={} response_metadata={} id='run--0f30f0a9-380e-4016-85aa-7cfeb1f14573'content='.' additional_kwargs={} response_metadata={} id='run--0f30f0a9-380e-4016-85aa-7cfeb1f14573'content='' additional_kwargs={} response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0'} id='run--0f30f0a9-380e-4016-85aa-7cfeb1f14573'content='' additional_kwargs={} response_metadata={} id='run--0f30f0a9-380e-4016-85aa-7cfeb1f14573' usage_metadata={'input_tokens': 215, 'output_tokens': 4, 'total_tokens': 219, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "await process_input(HumanMessage(content=\"op\"))"
+    "await process_input(HumanMessage(content=\"number 4 in french\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'main': InMemoryHistory(messages=[HumanMessage(content='are you teacher?', additional_kwargs={}, response_metadata={}), AIMessage(content='Yes.', additional_kwargs={}, response_metadata={}), HumanMessage(content='what is earth', additional_kwargs={}, response_metadata={}), AIMessage(content='Planet.', additional_kwargs={}, response_metadata={}), HumanMessage(content='what is earth', additional_kwargs={}, response_metadata={}), AIMessageChunk(content='Planet.', additional_kwargs={}, response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0'}, id='run--93093a8f-bfa9-478c-aa94-c5d009c5205a'), HumanMessage(content='op', additional_kwargs={}, response_metadata={}), AIMessageChunk(content='Clarify.', additional_kwargs={}, response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0'}, id='run--0f30f0a9-380e-4016-85aa-7cfeb1f14573', usage_metadata={'input_tokens': 215, 'output_tokens': 4, 'total_tokens': 219, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})])}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(store)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
