Database Changed: Cassandra to Postgres [asyncpg and SQLalchemy]

--- a/backend/genai.backend.fastapi/extras/test.ipynb
+++ b/backend/genai.backend.fastapi/extras/test.ipynb
@@ -478,6 +478,173 @@
     "# Add a new message 'j' to the 'feature' branch\n",
     "store['b'].add_messages([AIMessage(content=\"j\")])\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Cassandra to Postgres Migration Script**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✔ Migrated users\n",
+      "✔ Migrated chat history\n",
+      "✔ Migrated models\n",
+      "✔ Migrated subscriptions\n"
+     ]
+    }
+   ],
+   "source": [
+    "from cassandra.cluster import Cluster\n",
+    "import psycopg2\n",
+    "import uuid\n",
+    "import sys\n",
+    "\n",
+    "# Cassandra config\n",
+    "CASSANDRA_KEYSPACE = \"eva\"\n",
+    "CASSANDRA_CONTACT_POINTS = ['localhost']  # update as needed\n",
+    "\n",
+    "# Postgres config\n",
+    "POSTGRES_CONN_PARAMS = {\n",
+    "    'host': 'localhost',\n",
+    "    'database': 'postgres',\n",
+    "    'user': 'dev_user',\n",
+    "    'password': 'dev_password',\n",
+    "    'port': 5432\n",
+    "}\n",
+    "\n",
+    "def connect_cassandra():\n",
+    "    cluster = Cluster(CASSANDRA_CONTACT_POINTS)\n",
+    "    session = cluster.connect()\n",
+    "    session.set_keyspace(CASSANDRA_KEYSPACE)\n",
+    "    return session\n",
+    "\n",
+    "def connect_postgres():\n",
+    "    conn = psycopg2.connect(**POSTGRES_CONN_PARAMS)\n",
+    "    conn.autocommit = True\n",
+    "    return conn\n",
+    "\n",
+    "def migrate_users(cassandra_session, pg_conn):\n",
+    "    rows = cassandra_session.execute(\"SELECT * FROM users\")\n",
+    "    cur = pg_conn.cursor()\n",
+    "    \n",
+    "    for row in rows:\n",
+    "        try:\n",
+    "            cur.execute(\"\"\"\n",
+    "                INSERT INTO public.users (user_id, email, partner, first_name, last_name, role)\n",
+    "                VALUES (%s, %s, %s, %s, %s, %s)\n",
+    "                ON CONFLICT (email, partner) DO NOTHING;\n",
+    "            \"\"\", (\n",
+    "                row.userid,\n",
+    "                row.email,\n",
+    "                row.partner,\n",
+    "                row.firstname,\n",
+    "                row.lastname,\n",
+    "                row.role or 'user'\n",
+    "            ))\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error inserting user {row.email}: {e}\")\n",
+    "    cur.close()\n",
+    "    print(\"✔ Migrated users\")\n",
+    "\n",
+    "def migrate_chathistory(cassandra_session, pg_conn):\n",
+    "    rows = cassandra_session.execute(\"SELECT * FROM chathistory\")\n",
+    "    cur = pg_conn.cursor()\n",
+    "\n",
+    "    for row in rows:\n",
+    "        try:\n",
+    "            cur.execute(\"\"\"\n",
+    "                INSERT INTO public.chat_history (chat_id, user_id, visible, history_blob, chat_title, last_updated, token_count)\n",
+    "                VALUES (%s, %s, %s, %s, %s, %s, %s)\n",
+    "                ON CONFLICT (chat_id) DO NOTHING;\n",
+    "            \"\"\", (\n",
+    "                row.chatid,\n",
+    "                row.userid,\n",
+    "                row.visible if row.visible is not None else True,\n",
+    "                bytes(row.chathistoryjson),\n",
+    "                row.chattitle,\n",
+    "                row.createdon,\n",
+    "                row.nettokenconsumption or 0\n",
+    "            ))\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error inserting chat {row.chatid}: {e}\")\n",
+    "    cur.close()\n",
+    "    print(\"✔ Migrated chat history\")\n",
+    "\n",
+    "def migrate_availablemodels(cassandra_session, pg_conn):\n",
+    "    rows = cassandra_session.execute(\"SELECT * FROM availablemodels\")\n",
+    "    cur = pg_conn.cursor()\n",
+    "\n",
+    "    for row in rows:\n",
+    "        try:\n",
+    "            cur.execute(\"\"\"\n",
+    "                INSERT INTO public.ai_models (\n",
+    "                    model_id, is_active, api_key, deployment_name, endpoint,\n",
+    "                    model_name, model_type, model_version, provider\n",
+    "                )\n",
+    "                VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
+    "                ON CONFLICT (deployment_name, model_version) DO NOTHING;\n",
+    "            \"\"\", (\n",
+    "                row.deploymentid,\n",
+    "                row.isactive if row.isactive is not None else True,\n",
+    "                row.apikey,\n",
+    "                row.deploymentname,\n",
+    "                row.endpoint,\n",
+    "                row.modelname,\n",
+    "                row.modeltype,\n",
+    "                row.modelversion,\n",
+    "                row.provider\n",
+    "            ))\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error inserting model {row.deploymentname}: {e}\")\n",
+    "    cur.close()\n",
+    "    print(\"✔ Migrated models\")\n",
+    "\n",
+    "def migrate_usersubscriptions(cassandra_session, pg_conn):\n",
+    "    rows = cassandra_session.execute(\"SELECT * FROM usersubscriptions\")\n",
+    "    cur = pg_conn.cursor()\n",
+    "\n",
+    "    for row in rows:\n",
+    "        try:\n",
+    "            cur.execute(\"\"\"\n",
+    "                INSERT INTO public.subscriptions (sub_id, user_id, model_id)\n",
+    "                VALUES (%s, %s, %s)\n",
+    "                ON CONFLICT (user_id, model_id) DO NOTHING;\n",
+    "            \"\"\", (\n",
+    "                uuid.uuid4(),  # generating a new sub_id\n",
+    "                row.userid,\n",
+    "                row.modelid\n",
+    "            ))\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error inserting subscription for user {row.userid}: {e}\")\n",
+    "    cur.close()\n",
+    "    print(\"✔ Migrated subscriptions\")\n",
+    "\n",
+    "def main():\n",
+    "    cassandra_session = connect_cassandra()\n",
+    "    pg_conn = connect_postgres()\n",
+    "    import psycopg2.extras\n",
+    "    psycopg2.extras.register_uuid()\n",
+    "    try:\n",
+    "        migrate_users(cassandra_session, pg_conn)\n",
+    "        migrate_chathistory(cassandra_session, pg_conn)\n",
+    "        migrate_availablemodels(cassandra_session, pg_conn)\n",
+    "        migrate_usersubscriptions(cassandra_session, pg_conn)\n",
+    "    finally:\n",
+    "        pg_conn.close()\n",
+    "        cassandra_session.shutdown()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
