--- a/backend/genai.backend.fastapi/extras/test.ipynb
+++ b/backend/genai.backend.fastapi/extras/test.ipynb
@@ -153,7 +153,7 @@
     "        self._limit = limit\n",
     "\n",
     "    @property\n",
-    "    def messages(self) -> Sequence[BaseMessage]:\n",
+    "    def messages(self) -> Sequence[BaseMessage]: # type: ignore\n",
     "        # Only return the last N messages\n",
     "        return self._full_history.messages[-self._limit:]\n",
     "\n",
@@ -177,13 +177,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.tools import tool\n",
+    "import datetime\n",
+    "@tool\n",
+    "def current_time(input: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Get the current date and time\n",
+    "    \"\"\"\n",
+    "    return \"The current time is: 2001-01-01 00:00:00\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# prompt = ChatPromptTemplate.from_template(\"Tell me a joke about {word} in 100 words.\")\n",
     "prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a helpful assistant.\"),\n",
+    "    (\"system\", os.environ[\"SYSTEM_PROMPT\"]),\n",
     "    MessagesPlaceholder(variable_name=\"history\"),\n",
     "    (\"human\", \"{input}\"),\n",
     "])\n",
@@ -196,9 +212,9 @@
     "    stream_usage=True\n",
     ")\n",
     "\n",
-    "chain = prompt | llm | parser\n",
+    "chain = prompt | llm\n",
     "chain_with_history = RunnableWithMessageHistory(\n",
-    "    chain,\n",
+    "    chain, # type: ignore\n",
     "    get_session_history=get_by_session_id,\n",
     "    input_messages_key=\"input\",\n",
     "    history_messages_key=\"history\",\n",
@@ -327,7 +343,7 @@
    "outputs": [],
    "source": [
     "from langchain_core.chat_history import BaseChatMessageHistory\n",
-    "from langchain_core.messages import BaseMessage, HumanMessage, AIMessage, ToolMessage, SystemMessage, FunctionMessage, trim_messages\n",
+    "from langchain_core.messages import BaseMessage, HumanMessage, AIMessage, ToolMessage, SystemMessage, FunctionMessage, trim_messages, AIMessageChunk\n",
     "from pydantic import BaseModel, Field\n",
     "from copy import deepcopy\n",
     "\n",
