System Prompt and Tool Descriptions enhanced. Backend Code Indentation and formatting fixed.

--- a/backend/genai.backend.fastapi/extras/cookbook.ipynb
+++ b/backend/genai.backend.fastapi/extras/cookbook.ipynb
@@ -30,36 +30,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Fetch Store all free models\n",
-    "models=[]\n",
+    "# Fetch Store all free models\n",
+    "models = []\n",
     "free_models = []\n",
-    "model_req_uri = getenv(\"OPENROUTER_URI\")+\"/models\"\n",
+    "model_req_uri = getenv(\"OPENROUTER_URI\") + \"/models\"\n",
     "response = requests.get(model_req_uri)\n",
-    "for model in response.json()['data']:\n",
-    "    if model['pricing']['prompt'] == '0' and model['pricing']['completion'] == '0' and model['pricing']['image'] == '0':\n",
-    "        free_models.append({\n",
-    "            'id': model['id'],\n",
-    "            'name': model['name'],\n",
-    "            'context_length': model['context_length'],\n",
-    "            'modality': model['architecture']['modality'],\n",
-    "            'tokenizer': model['architecture']['tokenizer'],\n",
-    "            'pricing': model['pricing'],\n",
-    "            'max_completion_tokens': model['top_provider']['max_completion_tokens'],\n",
-    "            'moderated': model['top_provider']['is_moderated'],\n",
-    "            'request_limit': model['per_request_limits']\n",
-    "            })\n",
+    "for model in response.json()[\"data\"]:\n",
+    "    if (\n",
+    "        model[\"pricing\"][\"prompt\"] == \"0\"\n",
+    "        and model[\"pricing\"][\"completion\"] == \"0\"\n",
+    "        and model[\"pricing\"][\"image\"] == \"0\"\n",
+    "    ):\n",
+    "        free_models.append(\n",
+    "            {\n",
+    "                \"id\": model[\"id\"],\n",
+    "                \"name\": model[\"name\"],\n",
+    "                \"context_length\": model[\"context_length\"],\n",
+    "                \"modality\": model[\"architecture\"][\"modality\"],\n",
+    "                \"tokenizer\": model[\"architecture\"][\"tokenizer\"],\n",
+    "                \"pricing\": model[\"pricing\"],\n",
+    "                \"max_completion_tokens\": model[\"top_provider\"][\"max_completion_tokens\"],\n",
+    "                \"moderated\": model[\"top_provider\"][\"is_moderated\"],\n",
+    "                \"request_limit\": model[\"per_request_limits\"],\n",
+    "            }\n",
+    "        )\n",
     "    else:\n",
-    "        models.append({\n",
-    "            'id': model['id'],\n",
-    "            'name': model['name'],\n",
-    "            'context_length': model['context_length'],\n",
-    "            'modality': model['architecture']['modality'],\n",
-    "            'tokenizer': model['architecture']['tokenizer'],\n",
-    "            'pricing': model['pricing'],\n",
-    "            'max_completion_tokens': model['top_provider']['max_completion_tokens'],\n",
-    "            'moderated': model['top_provider']['is_moderated'],\n",
-    "            'request_limit': model['per_request_limits']\n",
-    "            })\n",
+    "        models.append(\n",
+    "            {\n",
+    "                \"id\": model[\"id\"],\n",
+    "                \"name\": model[\"name\"],\n",
+    "                \"context_length\": model[\"context_length\"],\n",
+    "                \"modality\": model[\"architecture\"][\"modality\"],\n",
+    "                \"tokenizer\": model[\"architecture\"][\"tokenizer\"],\n",
+    "                \"pricing\": model[\"pricing\"],\n",
+    "                \"max_completion_tokens\": model[\"top_provider\"][\"max_completion_tokens\"],\n",
+    "                \"moderated\": model[\"top_provider\"][\"is_moderated\"],\n",
+    "                \"request_limit\": model[\"per_request_limits\"],\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "models.extend(free_models)"
    ]
@@ -70,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_models = [m for m in free_models if 'image' not in m['modality']]\n",
+    "text_models = [m for m in free_models if \"image\" not in m[\"modality\"]]\n",
     "\n",
     "random_text_model = random.choice(text_models)\n",
     "print(random_text_model)"
@@ -86,13 +94,13 @@
     "    prompt = ChatPromptTemplate.from_template(\"tell me a joke about {topic}. 200 words\")\n",
     "    parser = StrOutputParser()\n",
     "    llm = ChatOpenAI(\n",
-    "    api_key=getenv(\"OPENROUTER_TOKEN\"),\n",
-    "    base_url=getenv(\"OPENROUTER_URI\"),\n",
-    "    model=random_text_model['id'],\n",
-    "    tiktoken_model_name=random_text_model['tokenizer'],\n",
-    "    max_completion_tokens=random_text_model['max_completion_tokens'],\n",
-    "    temperature=0.1,\n",
-    "    streaming=True,\n",
+    "        api_key=getenv(\"OPENROUTER_TOKEN\"),\n",
+    "        base_url=getenv(\"OPENROUTER_URI\"),\n",
+    "        model=random_text_model[\"id\"],\n",
+    "        tiktoken_model_name=random_text_model[\"tokenizer\"],\n",
+    "        max_completion_tokens=random_text_model[\"max_completion_tokens\"],\n",
+    "        temperature=0.1,\n",
+    "        streaming=True,\n",
     "    )\n",
     "\n",
     "    chain = prompt | llm | parser"
@@ -112,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,11 +143,18 @@
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.chat_history import BaseChatMessageHistory\n",
-    "from langchain_core.messages import BaseMessage, HumanMessage, AIMessage, AIMessageChunk, ToolMessage\n",
+    "from langchain_core.messages import (\n",
+    "    BaseMessage,\n",
+    "    HumanMessage,\n",
+    "    AIMessage,\n",
+    "    AIMessageChunk,\n",
+    "    ToolMessage,\n",
+    ")\n",
     "from pydantic import BaseModel, Field\n",
     "from copy import deepcopy\n",
     "from langgraph.graph import StateGraph, START, END\n",
     "from langgraph.prebuilt import ToolNode, tools_condition\n",
+    "\n",
     "\n",
     "class GraphState(TypedDict):\n",
     "    user_id: uuid.UUID\n",
@@ -150,17 +165,24 @@
     "    token_usage: int\n",
     "    tool_used: bool\n",
     "\n",
+    "\n",
     "builder = StateGraph(GraphState)\n",
+    "\n",
+    "\n",
     "# Node 1: Process chat input\n",
     "async def process_chat(state):\n",
     "    return state\n",
+    "\n",
+    "\n",
     "# Node 2: Save to database\n",
     "async def save_to_db(state):\n",
     "    return state\n",
     "\n",
-    "#Node: sync tool messages to store\n",
+    "\n",
+    "# Node: sync tool messages to store\n",
     "async def sync_messages(state):\n",
     "    return state\n",
+    "\n",
     "\n",
     "# Build graph\n",
     "builder.add_node(\"process_chat\", process_chat)\n",
@@ -174,7 +196,7 @@
     "builder.add_node(\"save_to_db\", save_to_db)\n",
     "\n",
     "# Define edges\n",
-    "builder.set_entry_point(\"process_chat\") #START\n",
+    "builder.set_entry_point(\"process_chat\")  # START\n",
     "# Any time a tool is called, we return to the chatbot to decide the next step\n",
     "builder.add_edge(\"tools\", \"sync_messages\")\n",
     "builder.add_edge(\"sync_messages\", \"process_chat\")\n",
@@ -188,70 +210,6 @@
     "except Exception:\n",
     "    # This requires some extra dependencies and is optional\n",
     "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chunks:\n",
-      "1. LangChain is a framework for developing applications powered by language models.\n",
-      "2. It enables chaining of LLM calls, integrating with external tools, and managing context.\n",
-      "3. LangChain supports agents, memory, and tools like search and code execution.\n",
-      "\n",
-      "Related Chunks:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['LangChain is a framework for developing applications powered by language models.',\n",
-       " 'LangChain supports agents, memory, and tools like search and code execution.']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "\n",
-    "# Step 1: Define your paragraph\n",
-    "text = \"\"\"\n",
-    "LangChain is a framework for developing applications powered by language models. \n",
-    "It enables chaining of LLM calls, integrating with external tools, and managing context.\n",
-    "LangChain supports agents, memory, and tools like search and code execution.\n",
-    "\"\"\"\n",
-    "\n",
-    "# Step 2: Create the text splitter\n",
-    "splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=100,\n",
-    "    chunk_overlap=20,\n",
-    "    separators=[\"\\n\\n\", \"\\n\", \" \", \"\"],\n",
-    ")\n",
-    "\n",
-    "# Step 3: Split the text into chunks\n",
-    "chunks = splitter.split_text(text)\n",
-    "\n",
-    "# Step 4: Define a query\n",
-    "query = \"What is LangChain used for?\"\n",
-    "\n",
-    "# Step 5: Find related chunks based on simple keyword match\n",
-    "related_chunks = [chunk for chunk in chunks if any(word in chunk.lower() for word in query.lower().split())]\n",
-    "\n",
-    "# Output results\n",
-    "print(\"Chunks:\")\n",
-    "for i, c in enumerate(chunks):\n",
-    "    print(f\"{i+1}. {c}\")\n",
-    "\n",
-    "print(\"\\nRelated Chunks:\")\n",
-    "related_chunks\n"
    ]
   }
  ],
