--- a/backend/app/notebooks/test.ipynb
+++ b/backend/app/notebooks/test.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "if not getenv(\"AZURE_OPENAI_API_KEY\"):\n",
-    "  os.environ[\"AZURE_OPENAI_API_KEY\"] = getpass.getpass(\"Enter API key for Azure: \")\n",
+    "    os.environ[\"AZURE_OPENAI_API_KEY\"] = getpass.getpass(\"Enter API key for Azure: \")\n",
     "endpoint = getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
     "# endpoint = getenv(\"AZURE_OPENAI_ENDPOINT\").format(getenv(\"AZURE_OPENAI_DEPLOYMENT_NAME\"),  getenv(\"AZURE_OPENAI_API_VERSION\"))"
    ]
@@ -49,7 +49,7 @@
     "    azure_deployment=os.environ[\"AZURE_OPENAI_DEPLOYMENT_NAME\"],\n",
     "    api_version=os.environ[\"AZURE_OPENAI_API_VERSION\"],\n",
     "    temperature=0.01,\n",
-    "    stream_usage=True\n",
+    "    stream_usage=True,\n",
     ")\n",
     "\n",
     "chain = prompt | llm"
@@ -61,13 +61,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "messages = [  \n",
-    "(  \n",
-    "\"system\",  \n",
-    "\"You are a helpful translator. Translate the user sentence to French.\",  \n",
-    "),  \n",
-    "(\"human\", \"I love programming.\"),  \n",
-    "] "
+    "messages = [\n",
+    "    (\n",
+    "        \"system\",\n",
+    "        \"You are a helpful translator. Translate the user sentence to French.\",\n",
+    "    ),\n",
+    "    (\"human\", \"I love programming.\"),\n",
+    "]"
    ]
   },
   {
@@ -138,6 +138,7 @@
     "from langchain_core.messages import BaseMessage\n",
     "from pydantic import BaseModel, Field\n",
     "\n",
+    "\n",
     "class InMemoryHistory(BaseChatMessageHistory, BaseModel):\n",
     "    messages: list[BaseMessage] = Field(default_factory=list)\n",
     "\n",
@@ -147,15 +148,16 @@
     "    def clear(self) -> None:\n",
     "        self.messages = []\n",
     "\n",
+    "\n",
     "class ProxyHistory(BaseChatMessageHistory):\n",
     "    def __init__(self, full_history: InMemoryHistory, limit: int = 2):\n",
     "        self._full_history = full_history\n",
     "        self._limit = limit\n",
     "\n",
     "    @property\n",
-    "    def messages(self) -> Sequence[BaseMessage]: # type: ignore\n",
+    "    def messages(self) -> Sequence[BaseMessage]:  # type: ignore\n",
     "        # Only return the last N messages\n",
-    "        return self._full_history.messages[-self._limit:]\n",
+    "        return self._full_history.messages[-self._limit :]\n",
     "\n",
     "    def add_messages(self, messages: Sequence[BaseMessage]) -> None:\n",
     "        # Delegate writes to the original history\n",
@@ -168,21 +170,23 @@
     "store = {}\n",
     "session_id = \"student1234\"\n",
     "\n",
+    "\n",
     "def get_by_session_id(session_id: str) -> BaseChatMessageHistory:\n",
     "    if session_id not in store:\n",
     "        store[session_id] = InMemoryHistory()\n",
-    "    return ProxyHistory(store[session_id], limit=2)\n",
-    "\n"
+    "    return ProxyHistory(store[session_id], limit=2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.tools import tool\n",
     "import datetime\n",
+    "\n",
+    "\n",
     "@tool\n",
     "def current_time(input: str) -> str:\n",
     "    \"\"\"\n",
@@ -198,23 +202,25 @@
    "outputs": [],
    "source": [
     "# prompt = ChatPromptTemplate.from_template(\"Tell me a joke about {word} in 100 words.\")\n",
-    "prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", os.environ[\"SYSTEM_PROMPT\"]),\n",
-    "    MessagesPlaceholder(variable_name=\"history\"),\n",
-    "    (\"human\", \"{input}\"),\n",
-    "])\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", os.environ[\"SYSTEM_PROMPT\"]),\n",
+    "        MessagesPlaceholder(variable_name=\"history\"),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "    ]\n",
+    ")\n",
     "parser = StrOutputParser()\n",
     "llm = AzureChatOpenAI(\n",
     "    azure_endpoint=os.environ[\"AZURE_OPENAI_ENDPOINT\"],\n",
     "    azure_deployment=os.environ[\"AZURE_OPENAI_DEPLOYMENT_NAME\"],\n",
     "    api_version=os.environ[\"AZURE_OPENAI_API_VERSION\"],\n",
     "    temperature=0.01,\n",
-    "    stream_usage=True\n",
+    "    stream_usage=True,\n",
     ")\n",
     "\n",
     "chain = prompt | llm\n",
     "chain_with_history = RunnableWithMessageHistory(\n",
-    "    chain, # type: ignore\n",
+    "    chain,  # type: ignore\n",
     "    get_session_history=get_by_session_id,\n",
     "    input_messages_key=\"input\",\n",
     "    history_messages_key=\"history\",\n",
@@ -227,8 +233,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async for chunk in chain_with_history.astream({\"input\": \"wow\"},\n",
-    "    config={\"configurable\": {\"session_id\": \"base\"}}):\n",
+    "async for chunk in chain_with_history.astream(\n",
+    "    {\"input\": \"wow\"}, config={\"configurable\": {\"session_id\": \"base\"}}\n",
+    "):\n",
     "    print(chunk, end=\"\", flush=True)"
    ]
   },
@@ -259,7 +266,7 @@
     "from cassandra.auth import PlainTextAuthProvider\n",
     "\n",
     "# Connect to ScyllaDB\n",
-    "cluster = Cluster(['127.0.0.1'])  # Replace with your Scylla host IP if different\n",
+    "cluster = Cluster([\"127.0.0.1\"])  # Replace with your Scylla host IP if different\n",
     "session = cluster.connect()\n",
     "\n",
     "# Create keyspace (if not exists)\n",
@@ -324,14 +331,16 @@
     "        role text,\n",
     "        PRIMARY KEY ((email, partner), userid)\n",
     "    );\n",
-    "    \"\"\"\n",
+    "    \"\"\",\n",
     "]\n",
     "\n",
     "for query in table_queries:\n",
     "    session.execute(query)\n",
     "\n",
     "print(\"Keyspace and tables created successfully.\")\n",
-    "rows = session.execute(f\"SELECT table_name FROM system_schema.tables WHERE keyspace_name='{KEYSPACE}';\")\n",
+    "rows = session.execute(\n",
+    "    f\"SELECT table_name FROM system_schema.tables WHERE keyspace_name='{KEYSPACE}';\"\n",
+    ")\n",
     "for row in rows:\n",
     "    print(\"Table:\", row.table_name)\n"
    ]
@@ -343,11 +352,21 @@
    "outputs": [],
    "source": [
     "from langchain_core.chat_history import BaseChatMessageHistory\n",
-    "from langchain_core.messages import BaseMessage, HumanMessage, AIMessage, ToolMessage, SystemMessage, FunctionMessage, trim_messages, AIMessageChunk\n",
+    "from langchain_core.messages import (\n",
+    "    BaseMessage,\n",
+    "    HumanMessage,\n",
+    "    AIMessage,\n",
+    "    ToolMessage,\n",
+    "    SystemMessage,\n",
+    "    FunctionMessage,\n",
+    "    trim_messages,\n",
+    "    AIMessageChunk,\n",
+    ")\n",
     "from pydantic import BaseModel, Field\n",
     "from copy import deepcopy\n",
     "\n",
     "from typing import Sequence\n",
+    "\n",
     "\n",
     "class InMemoryHistory(BaseChatMessageHistory, BaseModel):\n",
     "    messages: list[BaseMessage] = Field(default_factory=list)\n",
@@ -357,14 +376,15 @@
     "\n",
     "    def clear(self) -> None:\n",
     "        self.messages = []\n",
-    "    \n",
+    "\n",
     "    def edit_message_at_index(self, index: int, new_message: BaseMessage) -> None:\n",
     "        if 0 <= index < len(self.messages):\n",
     "            self.messages[index] = new_message\n",
     "            # Truncate all messages after the edited one\n",
-    "            self.messages = self.messages[:index + 1]\n",
+    "            self.messages = self.messages[: index + 1]\n",
     "        else:\n",
     "            raise IndexError(\"Message index out of range.\")\n",
+    "\n",
     "\n",
     "store = {}\n",
     "branch = \"main\"\n",
@@ -381,13 +401,18 @@
     "        store[branch] = InMemoryHistory()\n",
     "    store[branch].messages.append(message)\n",
     "\n",
-    "def create_branch_from(parent_branch: str, new_branch: str, edit_index: int, new_message: BaseMessage):\n",
+    "\n",
+    "def create_branch_from(\n",
+    "    parent_branch: str, new_branch: str, edit_index: int, new_message: BaseMessage\n",
+    "):\n",
     "    parent_history = store.get(parent_branch)\n",
     "    if not parent_history:\n",
     "        raise ValueError(f\"Parent branch '{parent_branch}' does not exist.\")\n",
     "\n",
     "    # Clone messages up to the edit point\n",
-    "    new_history = InMemoryHistory(messages=deepcopy(parent_history.messages[:edit_index]))\n",
+    "    new_history = InMemoryHistory(\n",
+    "        messages=deepcopy(parent_history.messages[:edit_index])\n",
+    "    )\n",
     "    # Add the new edited message\n",
     "    new_history.add_messages([new_message])\n",
     "    # Store the new branch\n",
@@ -400,14 +425,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "parser = StrOutputParser()\n",
     "llm = AzureChatOpenAI(\n",
     "    azure_endpoint=os.environ[\"AZURE_OPENAI_ENDPOINT\"],\n",
     "    azure_deployment=os.environ[\"AZURE_OPENAI_DEPLOYMENT_NAME\"],\n",
     "    api_version=os.environ[\"AZURE_OPENAI_API_VERSION\"],\n",
     "    temperature=0.01,\n",
-    "    stream_usage=True\n",
+    "    stream_usage=True,\n",
     ")"
    ]
   },
@@ -418,11 +442,13 @@
    "outputs": [],
    "source": [
     "async def process_input(input):\n",
-    "    prompt = ChatPromptTemplate.from_messages([\n",
-    "        (\"system\", \"You are a helpful bot\"),\n",
-    "        MessagesPlaceholder(variable_name=\"history\"),\n",
-    "        (\"human\", \"{input}\"),\n",
-    "    ])\n",
+    "    prompt = ChatPromptTemplate.from_messages(\n",
+    "        [\n",
+    "            (\"system\", \"You are a helpful bot\"),\n",
+    "            MessagesPlaceholder(variable_name=\"history\"),\n",
+    "            (\"human\", \"{input}\"),\n",
+    "        ]\n",
+    "    )\n",
     "    chain = prompt | llm\n",
     "    chain_with_history = RunnableWithMessageHistory(\n",
     "        chain,\n",
@@ -441,8 +467,9 @@
     "        ],\n",
     "    )\n",
     "    # ai_message =\"\"\n",
-    "    async for chunk in chain_with_history.astream({\"input\": input},\n",
-    "                                                  config={\"configurable\": {\"branch\": branch}}):\n",
+    "    async for chunk in chain_with_history.astream(\n",
+    "        {\"input\": input}, config={\"configurable\": {\"branch\": branch}}\n",
+    "    ):\n",
     "        print(chunk.content, end=\"\", flush=True)\n",
     "        # ai_message += chunk\n",
     "    # InMemoryHistory().add_messages([HumanMessage(content=input), AIMessage(content=ai_message)])\n"
@@ -454,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "branch=\"part\""
+    "branch = \"part\""
    ]
   },
   {
@@ -485,14 +512,14 @@
     "\n",
     "# Create a new branch 'feature' by editing message at index 2 ('c') to 'g'\n",
     "create_branch_from(\n",
-    "    parent_branch='main',\n",
-    "    new_branch='b',\n",
+    "    parent_branch=\"main\",\n",
+    "    new_branch=\"b\",\n",
     "    edit_index=0,\n",
-    "    new_message=HumanMessage(content=\"check\")\n",
+    "    new_message=HumanMessage(content=\"check\"),\n",
     ")\n",
     "\n",
     "# Add a new message 'j' to the 'feature' branch\n",
-    "store['b'].add_messages([AIMessage(content=\"j\")])\n"
+    "store[\"b\"].add_messages([AIMessage(content=\"j\")])\n"
    ]
   },
   {
@@ -506,18 +533,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✔ Migrated users\n",
-      "✔ Migrated chat history\n",
-      "✔ Migrated models\n",
-      "✔ Migrated subscriptions\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cassandra.cluster import Cluster\n",
     "import psycopg2\n",
@@ -526,16 +542,17 @@
     "\n",
     "# Cassandra config\n",
     "CASSANDRA_KEYSPACE = \"eva\"\n",
-    "CASSANDRA_CONTACT_POINTS = ['localhost']  # update as needed\n",
+    "CASSANDRA_CONTACT_POINTS = [\"localhost\"]  # update as needed\n",
     "\n",
     "# Postgres config\n",
     "POSTGRES_CONN_PARAMS = {\n",
-    "    'host': 'localhost',\n",
-    "    'database': 'postgres',\n",
-    "    'user': 'dev_user',\n",
-    "    'password': 'dev_password',\n",
-    "    'port': 5432\n",
+    "    \"host\": \"localhost\",\n",
+    "    \"database\": \"postgres\",\n",
+    "    \"user\": \"dev_user\",\n",
+    "    \"password\": \"dev_password\",\n",
+    "    \"port\": 5432,\n",
     "}\n",
+    "\n",
     "\n",
     "def connect_cassandra():\n",
     "    cluster = Cluster(CASSANDRA_CONTACT_POINTS)\n",
@@ -543,33 +560,39 @@
     "    session.set_keyspace(CASSANDRA_KEYSPACE)\n",
     "    return session\n",
     "\n",
+    "\n",
     "def connect_postgres():\n",
     "    conn = psycopg2.connect(**POSTGRES_CONN_PARAMS)\n",
     "    conn.autocommit = True\n",
     "    return conn\n",
     "\n",
+    "\n",
     "def migrate_users(cassandra_session, pg_conn):\n",
     "    rows = cassandra_session.execute(\"SELECT * FROM users\")\n",
     "    cur = pg_conn.cursor()\n",
-    "    \n",
+    "\n",
     "    for row in rows:\n",
     "        try:\n",
-    "            cur.execute(\"\"\"\n",
+    "            cur.execute(\n",
+    "                \"\"\"\n",
     "                INSERT INTO public.users (user_id, email, partner, first_name, last_name, role)\n",
     "                VALUES (%s, %s, %s, %s, %s, %s)\n",
     "                ON CONFLICT (email, partner) DO NOTHING;\n",
-    "            \"\"\", (\n",
-    "                row.userid,\n",
-    "                row.email,\n",
-    "                row.partner,\n",
-    "                row.firstname,\n",
-    "                row.lastname,\n",
-    "                row.role or 'user'\n",
-    "            ))\n",
+    "            \"\"\",\n",
+    "                (\n",
+    "                    row.userid,\n",
+    "                    row.email,\n",
+    "                    row.partner,\n",
+    "                    row.firstname,\n",
+    "                    row.lastname,\n",
+    "                    row.role or \"user\",\n",
+    "                ),\n",
+    "            )\n",
     "        except Exception as e:\n",
     "            print(f\"Error inserting user {row.email}: {e}\")\n",
     "    cur.close()\n",
     "    print(\"✔ Migrated users\")\n",
+    "\n",
     "\n",
     "def migrate_chathistory(cassandra_session, pg_conn):\n",
     "    rows = cassandra_session.execute(\"SELECT * FROM chathistory\")\n",
@@ -577,23 +600,27 @@
     "\n",
     "    for row in rows:\n",
     "        try:\n",
-    "            cur.execute(\"\"\"\n",
+    "            cur.execute(\n",
+    "                \"\"\"\n",
     "                INSERT INTO public.chat_history (chat_id, user_id, visible, history_blob, chat_title, last_updated, token_count)\n",
     "                VALUES (%s, %s, %s, %s, %s, %s, %s)\n",
     "                ON CONFLICT (chat_id) DO NOTHING;\n",
-    "            \"\"\", (\n",
-    "                row.chatid,\n",
-    "                row.userid,\n",
-    "                row.visible if row.visible is not None else True,\n",
-    "                bytes(row.chathistoryjson),\n",
-    "                row.chattitle,\n",
-    "                row.createdon,\n",
-    "                row.nettokenconsumption or 0\n",
-    "            ))\n",
+    "            \"\"\",\n",
+    "                (\n",
+    "                    row.chatid,\n",
+    "                    row.userid,\n",
+    "                    row.visible if row.visible is not None else True,\n",
+    "                    bytes(row.chathistoryjson),\n",
+    "                    row.chattitle,\n",
+    "                    row.createdon,\n",
+    "                    row.nettokenconsumption or 0,\n",
+    "                ),\n",
+    "            )\n",
     "        except Exception as e:\n",
     "            print(f\"Error inserting chat {row.chatid}: {e}\")\n",
     "    cur.close()\n",
     "    print(\"✔ Migrated chat history\")\n",
+    "\n",
     "\n",
     "def migrate_availablemodels(cassandra_session, pg_conn):\n",
     "    rows = cassandra_session.execute(\"SELECT * FROM availablemodels\")\n",
@@ -601,28 +628,32 @@
     "\n",
     "    for row in rows:\n",
     "        try:\n",
-    "            cur.execute(\"\"\"\n",
+    "            cur.execute(\n",
+    "                \"\"\"\n",
     "                INSERT INTO public.ai_models (\n",
     "                    model_id, is_active, api_key, deployment_name, endpoint,\n",
     "                    model_name, model_type, model_version, provider\n",
     "                )\n",
     "                VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
     "                ON CONFLICT (deployment_name, model_version) DO NOTHING;\n",
-    "            \"\"\", (\n",
-    "                row.deploymentid,\n",
-    "                row.isactive if row.isactive is not None else True,\n",
-    "                row.apikey,\n",
-    "                row.deploymentname,\n",
-    "                row.endpoint,\n",
-    "                row.modelname,\n",
-    "                row.modeltype,\n",
-    "                row.modelversion,\n",
-    "                row.provider\n",
-    "            ))\n",
+    "            \"\"\",\n",
+    "                (\n",
+    "                    row.deploymentid,\n",
+    "                    row.isactive if row.isactive is not None else True,\n",
+    "                    row.apikey,\n",
+    "                    row.deploymentname,\n",
+    "                    row.endpoint,\n",
+    "                    row.modelname,\n",
+    "                    row.modeltype,\n",
+    "                    row.modelversion,\n",
+    "                    row.provider,\n",
+    "                ),\n",
+    "            )\n",
     "        except Exception as e:\n",
     "            print(f\"Error inserting model {row.deploymentname}: {e}\")\n",
     "    cur.close()\n",
     "    print(\"✔ Migrated models\")\n",
+    "\n",
     "\n",
     "def migrate_usersubscriptions(cassandra_session, pg_conn):\n",
     "    rows = cassandra_session.execute(\"SELECT * FROM usersubscriptions\")\n",
@@ -630,24 +661,29 @@
     "\n",
     "    for row in rows:\n",
     "        try:\n",
-    "            cur.execute(\"\"\"\n",
+    "            cur.execute(\n",
+    "                \"\"\"\n",
     "                INSERT INTO public.subscriptions (sub_id, user_id, model_id)\n",
     "                VALUES (%s, %s, %s)\n",
     "                ON CONFLICT (user_id, model_id) DO NOTHING;\n",
-    "            \"\"\", (\n",
-    "                uuid.uuid4(),  # generating a new sub_id\n",
-    "                row.userid,\n",
-    "                row.modelid\n",
-    "            ))\n",
+    "            \"\"\",\n",
+    "                (\n",
+    "                    uuid.uuid4(),  # generating a new sub_id\n",
+    "                    row.userid,\n",
+    "                    row.modelid,\n",
+    "                ),\n",
+    "            )\n",
     "        except Exception as e:\n",
     "            print(f\"Error inserting subscription for user {row.userid}: {e}\")\n",
     "    cur.close()\n",
     "    print(\"✔ Migrated subscriptions\")\n",
     "\n",
+    "\n",
     "def main():\n",
     "    cassandra_session = connect_cassandra()\n",
     "    pg_conn = connect_postgres()\n",
     "    import psycopg2.extras\n",
+    "\n",
     "    psycopg2.extras.register_uuid()\n",
     "    try:\n",
     "        migrate_users(cassandra_session, pg_conn)\n",
@@ -657,6 +693,7 @@
     "    finally:\n",
     "        pg_conn.close()\n",
     "        cassandra_session.shutdown()\n",
+    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
